LDEV-4457 Create groupings based on file upload

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -740,5 +740,21 @@ index.kumalive.enter.learner  =Enter as a learner
 index.kumalive.report  =Reports
 index.kumalive.rubric  =Rubrics management
 
+label.import.groups.from.template=Import groups from template	
+label.import.groups.from.template.description=Download the template spreadsheet to create your groups using all the present learners in this lesson/course. Once you upload the file, the groups will be automatically created	according to the spreadsheet. 
+label.download.template=Download Template
+label.upload.group.spreadsheet=Upload Finished Spreadsheet
+error.file.required=Grouped Spreadsheet Required
+error.file.wrong.format=Grouped Spreadsheet in the wrong format. Please upload a file based on the given template.
+label.import.successful=Group Import successful. {0} learners allocated to groups, {1} learners skipped.
+label.import.warning.replace.groups=Importing this file will replace the existing groups. Do you want to import this file?
+filename.create.grouping.template=create-grouping-template
+spreadsheet.column.login=Login
+spreadsheet.column.firstname=First Name
+spreadsheet.column.lastname=Last Name
+spreadsheet.column.groupname=Group Name
+error.groups.upload.locked=Cannot update groups as the groups are now in use.
+error.branching.upload.must.use.existing.groups=Cannot update branching. Must use the existing names: {0}.
+
 
 #======= End labels: Exported 732 labels for en AU =====
