LDEV-4454 Add buttons to release votes & voters to learners

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -126,7 +126,7 @@ label.kumalive.wait.start  =Wait for a teacher to start Kumalive
 label.kumalive.name.enter  =Enter a name for a new Kumalive
 button.kumalive.create  =Create
 button.kumalive.finish.kumalive  =Finish Kumalive
-button.kumalive.ask  =Ask a question
+button.kumalive.ask =Ask question
 button.kumalive.finish.question  =Finish question
 button.kumalive.raise  =Raise hand
 button.kumalive.putdown  =Put hand down
@@ -158,6 +158,7 @@ button.kumalive.ok  =OK
 button.kumalive.report.export.all  =Export all
 button.kumalive.report.export.selected  =Export selected
 button.kumalive.poll =Poll
+button.kumalive.poll.create =Create poll
 label.kumalive.poll.question =Question (optional)
 label.kumalive.poll.question.tip =for example: Why is the sky blue?
 label.kumalive.poll.answer =Answers
@@ -173,8 +174,12 @@ label.kumalive.poll.answer.custom.error.syntax =Custom answer syntax is incorrec
 label.kumalive.poll.answer.custom.error.count =Maximum 10 answers allowed
 button.kumalive.poll.start =Ask now!
 button.kumalive.poll.vote =Vote
-button.kumalive.poll.finish =Finish
-message.kumalive.poll.finish.confirm =Are you sure you want to finish this poll?
-button.kumalive.poll.close =Close
+button.kumalive.poll.finish =Finish poll
+message.kumalive.poll.finish.confirm =Are you sure you want to finish this poll and prevent learners from voting?
+button.kumalive.poll.close =Close poll
+button.kumalive.poll.release.votes =Show votes to learners
+message.kumalive.poll.release.votes.confirm =Are you sure you want to show poll results to students who voted?
+button.kumalive.poll.release.voters =Show votes & voters to learners
+message.kumalive.poll.release.voters.confirm =Are you sure you want to show poll results and voters' names to students?
 
 #======= End labels: Exported 151 labels for en AU =====
