--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -126,7 +126,7 @@ label.kumalive.wait.start  =Wait for a teacher to start Kumalive
 label.kumalive.name.enter  =Enter a name for a new Kumalive
 button.kumalive.create  =Create
 button.kumalive.finish.kumalive  =Finish Kumalive
-button.kumalive.ask  =Ask a question
+button.kumalive.ask  =Ask question
 button.kumalive.finish.question  =Finish question
 button.kumalive.raise  =Raise hand
 button.kumalive.putdown  =Put hand down
