--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -171,7 +171,7 @@ label.kumalive.poll.answer.no =No
 label.kumalive.poll.answer.custom =Custom...
 label.kumalive.poll.answer.custom.tip ={Put} {each} {answer} {in} {curly} {brackets}
 label.kumalive.poll.answer.custom.error.syntax =Custom answer syntax is incorrect. Example: {first answer} {second answer}
-label.kumalive.poll.answer.custom.error.count =Maximum 10 answers allowed
+label.kumalive.poll.answer.custom.error.count =Maximum 9 answers allowed
 button.kumalive.poll.start =Ask now!
 button.kumalive.poll.vote =Vote
 button.kumalive.poll.finish =Finish poll
@@ -181,5 +181,7 @@ button.kumalive.poll.release.votes =Show votes to learners
 message.kumalive.poll.release.votes.confirm =Are you sure you want to show poll results to students who voted?
 button.kumalive.poll.release.voters =Show votes & voters to learners
 message.kumalive.poll.release.voters.confirm =Are you sure you want to show poll results and voters' names to students?
-
+label.kumalive.poll.missing.voters =Not voted
+label.kumalive.poll.results =Results
+label.kumalive.poll.votes.total =Total votes
 #======= End labels: Exported 151 labels for en AU =====
