LDEV-4454 Add bar chart

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -184,4 +184,5 @@ message.kumalive.poll.release.voters.confirm =Are you sure you want to show poll
 label.kumalive.poll.missing.voters =Not voted
 label.kumalive.poll.results =Results
 label.kumalive.poll.votes.total =Total votes
+button.kumalive.poll.chart.switch =Switch chart
 #======= End labels: Exported 151 labels for en AU =====
