LDEV-4471: Formatted email with SPA calculations for user results

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -144,12 +144,6 @@ label.monitoring.number.learners.finished  =Number of learners finished
 label.monitoring.view  =View {0}
 label.close  =Close
 event.sent.results.subject  =LAMS: {0} results were released
-event.sent.results.body  =<p>{0}<br/><br/>Your results are:</p><div>{1}</div><p>This message was send automatically, please do not reply to it.</p>
-event.sent.results.criteria.comment  =<p><strong>{0}</strong>:<ul>{1}</ul></p>
-event.sent.results.criteria.star  =<p><strong>{0}</strong> (Star): {1}</p><UL>{2}</UL>
-event.sent.results.criteria.hedge  =<p><strong>{0}</strong> (Mark Hedging): {1} out of {2}</p>
-event.sent.results.criteria.rank  =<p><strong>{0}</strong> (Rank): {1} out of {2}</p>
-event.sent.results.criteria.rankAll  =<p><strong>{0}</strong> (Rank All): {1}</p>
 event.sent.results.no.results  =No results
 msg.results.sent  ={0} Email(s) Sent
 button.email.results  =Email Results
@@ -173,5 +167,30 @@ label.removed.user.warning  =The teacher has limited your ability to rate and be
 label.user.hidden  =Remove user from rating
 label.hide.user.confirmation  =Are you sure you want to stop rating this user? It will lead to removal of all ratings and comments left by him/her.
 
-
+label.file.downloaded=Spreadsheet downloaded 
+email.SPA=SPA
+email.SPA.factor=SPA Factor
+email.SAPA=SAPA
+email.SAPA.factor=SAPA Factor
+email.self.rating=Self rating
+email.peers.rating=Peers\' rating
+email.explanation.SPA.less.one=SPA < 1.0
+email.explanation.SPA.one=SPA = 1.0
+email.explanation.SPA.greater.one=SPA > 1.0
+email.explanation.SAPA.less.one=SAPA < 1.0
+email.explanation.SAPA.one=SAPA = 1.0
+email.explanation.SAPA.greater.one=SAPA > 1.0
+email.explanation.1=Your performance is below expectation and your self-assessment is too low.
+email.explanation.2=Your performance met expectation but your self-assessment is too low.
+email.explanation.3=Your performance exceeds expectation but your self-assessment is too low.
+email.explanation.4=Your performance is below expectation and your self-assessment is about right.
+email.explanation.5=Your performance met expectation and your self-assessment is about right.
+email.explanation.6=Your performance exceeds expectation and your self-assessment is about right.
+email.explanation.7=Your performance is below expectation and your self-assessment is too high.
+email.explanation.8=Your performance met expectation but your self-assessment is too high.
+email.explanation.9=Your performance exceeds expectation but your self-assessment is too high.
+email.send.automatically=This message was sent automatically, please do not reply to it.
+email.label.feedback=Feedback from group members for {0}:
+email.label.self.rating=Self rating
+email.label.peers.ratng=Peers
 #======= End labels: Exported 166 labels for en AU =====
