LDEV-4481 Add full implementation of min/max time taken.

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -69,6 +69,8 @@ gradebook.export.lesson.summary  =Lesson summary
 gradebook.export.learner.view  =Learner view
 gradebook.export.time.taken.seconds  =Time taken (seconds)
 gradebook.export.average.time.taken.seconds  =Median time taken (seconds)
+gradebook.export.max.time.taken.seconds  =Maximum time taken (seconds)
+gradebook.export.min.time.taken.seconds  =Minimum time taken (seconds)
 gradebook.export.user  =User
 gradebook.exportcourse.course.summary  =Course summary
 gradebook.exportcourse.lessonFeedback  =Lesson feedback
