LDEV-4484 Print Grouping Page

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -756,5 +756,6 @@ spreadsheet.column.groupname=Group Name
 error.groups.upload.locked=Cannot update groups as the groups are now in use.
 error.branching.upload.must.use.existing.groups=Cannot update branching. Must use the existing names: {0}.
 
+label.print=Print
 
 #======= End labels: Exported 732 labels for en AU =====
