--- a/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Tue Oct 10 22:26:44 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Dec 06 03:12:58 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -163,7 +163,7 @@ msg.export.choose.format.instruction  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03b
 msg.export.choose.format.lams  =\u039c\u03bf\u03c1\u03c6\u03ae LAMS
 msg.export.choose.format.ims  = IMS Learning Design \u03b5\u03c0\u03af\u03c0\u03b5\u03b4\u03bf A (\u0391\u03c5\u03c4\u03ae \u03b7  \u03bc\u03bf\u03c1\u03c6\u03ae \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03b9\u03c3\u03b1\u03c7\u03b8\u03b5\u03af \u03c0\u03af\u03c3\u03c9 \u03c3\u03c4\u03bf LAMS. \u039c\u03cc\u03bd\u03bf\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae !)
 button.export  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
-label.open.lesson  =\u0386\u03bd\u03bf\u03b9\u03be\u03b5 \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1
+label.open.lesson  =\u0386\u03bd\u03bf\u03b9\u03be\u03b5 \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1
 label.msg.status  =\u039a\u03b1\u03c4\u03ac\u03c3\u03c4\u03b1\u03c3\u03b7: {0}
 msg.status.not.stated  =\u0391\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03b9 \u03b1\u03c1\u03c7\u03af\u03c3\u03b5\u03b9 \u03ba\u03b1\u03b9 \u03c3\u03c5\u03bd\u03b5\u03c0\u03ce\u03c2 \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03c4\u03b5 \u03b4\u03c5\u03bd\u03b1\u03c4\u03cc\u03c4\u03b7\u03c4\u03b1 \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7\u03c2.
 msg.status.disabled  =\u0391\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c0\u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03b7\u03bc\u03ad\u03bd\u03bf, \u03c3\u03c5\u03bd\u03b5\u03c0\u03ce\u03c2 \u03b4\u03b5\u03bd \u03ad\u03c7\u03b5\u03c4\u03b5 \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03cc.
@@ -725,6 +725,19 @@ label.course.groups.name.not.unique  =\u0397 \u03bf\u03bc\u03b1\u03b4\u03bf\u03c
 label.save.as.course.grouping.hint  =\u039c\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03c3\u03b5\u03c4\u03b5 \u03c4\u03b9\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2 \u03c9\u03c2 "\u039f\u03bc\u03ac\u03b4\u03b5\u03c2 \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd" \u03ad\u03c4\u03c3\u03b9 \u03ce\u03c3\u03c4\u03b5 \u03bd\u03b1 \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03bd \u03bd\u03b1 \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03b7\u03b8\u03bf\u03cd\u03bd \u03ba\u03b1\u03b9 \u03c3\u03b5 \u03ac\u03bb\u03bb\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1. \u0391\u03bd \u03bf\u03b9 \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03ba\u03c1\u03b9\u03b2\u03ce\u03c2 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1, \u03af\u03c3\u03c9\u03c2 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03c4\u03bf \u03ba\u03ac\u03bd\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc. \u0394\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03ac, \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03c4\u03bf \u03ba\u03bf\u03c5\u03bc\u03c0\u03af \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03c4\u03bf\u03c5\u03c2 \u03b4\u03ce\u03c3\u03b5\u03c4\u03b5 \u03ad\u03bd\u03b1 \u03cc\u03bd\u03bf\u03bc\u03b1 \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03c4\u03b9\u03c2 \u03b5\u03c0\u03b1\u03bd\u03b1\u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c1\u03b3\u03cc\u03c4\u03b5\u03c1\u03b1.
 label.advanced.settings  =\u03a0\u03c1\u03bf\u03b7\u03b3\u03bc\u03ad\u03bd\u03b5\u03c2 \u03c1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
 audit.delete.portrait  =\u03a4\u03bf \u03c0\u03bf\u03c1\u03c4\u03c1\u03ad\u03c4\u03bf \u03b3\u03b9\u03b1 \u03c4\u03bf\u03bd \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7 {0} {1} ({2}) \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03c6\u03b7\u03ba\u03b5. \u03a4\u03bf Id \u03c0\u03bf\u03c1\u03c4\u03c1\u03ad\u03c4\u03bf\u03c5 \u03ae\u03c4\u03b1\u03bd {3}.
+authoring.fla.weights.menu  =\u0392\u03ac\u03c1\u03b7
+authoring.fla.weights.title  =\u0392\u03ac\u03c1\u03b7 \u03c3\u03c4\u03b9\u03c2 \u03b5\u03be\u03cc\u03b4\u03bf\u03c5\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+authoring.fla.weights.activity  =\u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
+authoring.fla.weights.output  =\u0388\u03be\u03bf\u03b4\u03bf\u03c2
+authoring.fla.weights.weight  =\u0392\u03ac\u03c1\u03bf\u03c2
+authoring.fla.weights.sum  =\u0391\u03b8\u03c1\u03bf\u03b9\u03c3\u03bc\u03b1
+authoring.fla.weights.sum.error  =\u03a4\u03b1 \u03b2\u03ac\u03c1\u03b7 \u03b5\u03be\u03cc\u03b4\u03bf\u03c5 \u03b4\u03b5\u03bd \u03ad\u03c7\u03bf\u03c5\u03bd \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf 100%. \u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03c4\u03b5 \u03c4\u03bf \u03c3\u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03b4\u03b9\u03b1\u03bb\u03cc\u03b3\u03bf\u03c5 \u0392\u03ac\u03c1\u03b7.
+label.tab.advanced.field.gradebook.complete  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03c4\u03c9\u03bd \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03b5\u03c3\u03bc\u03ac\u03c4\u03c9\u03bd \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+index.kumalive  =\u03a0\u03af\u03bd\u03b1\u03ba\u03b1 \u0394\u03b9\u03b1\u03b2\u03b1\u03b8\u03bc\u03b9\u03c3\u03bc\u03ad\u03bd\u03c9\u03bd \u039a\u03c1\u03b9\u03c4\u03b7\u03c1\u03af\u03c9\u03bd (Kumalive)
+index.kumalive.tooltip  =\u0395\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae \u03c3\u03b5 \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03c3\u03b5 \u03b6\u03c9\u03bd\u03c4\u03b1\u03bd\u03ae \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
+index.kumalive.enter.learner  =\u0395\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae \u03c9\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2
+index.kumalive.report  =\u0391\u03bd\u03b1\u03c6\u03bf\u03c1\u03ad\u03c2
+index.kumalive.rubric  =\u0394\u03b9\u03b1\u03c7\u03b5\u03af\u03c1\u03b9\u03c3\u03b7 \u03a0\u03b9\u03bd\u03ac\u03ba\u03c9\u03bd \u0394\u03b9\u03b1\u03b2\u03b1\u03b8\u03bc\u03b9\u03c3\u03bc\u03ad\u03bd\u03c9\u03bd \u039a\u03c1\u03b9\u03c4\u03b7\u03c1\u03af\u03c9\u03bd (Rubrics)
 
 
-#======= End labels: Exported 719 labels for el GR =====
+#======= End labels: Exported 732 labels for el GR =====
