LDEV-4482 Update changes on Leader Awareness feature for Submit File tool

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources.properties
@@ -65,7 +65,7 @@ label.monitoring.edit.activity.cancel  =Cancel
 label.monitoring.edit.activity.update  =Update activity
 label.select.leader  =Leader selection
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he/she commences it.
-label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
+label.waiting.for.leader.finish  =Please wait until a group leader finishes the activity.
 monitoring.statistic.title  =Statistic for monitoring
 monitoring.statistic.marked  =Marked files:
 monitoring.statistic.not.marked  =Not marked files:
@@ -161,5 +161,8 @@ errors.required  ={0} is required.
 errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 label.add  =Add
 label.use.select.leader.tool.output  =Use leaders from Select Leader tool
+label.waiting.for.leader  =Please, wait while somebody will become a group leader
+label.users.from.group  =Other learners participating in current group:
+label.refresh  =Refresh
 
 #======= End labels: Exported 151 labels for en AU =====
