--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -517,6 +517,11 @@ label.delete.portrait  =Delete portrait
 sysadmin.maintain.session.delete  =Delete
 config.display.portrait  =Display learner's portrait in a progress bar
 config.kumalive.enable  =Enable Kumalive
-
-
+admin.delete.lessons =Delete all lessons
+msg.delete.all.lesson.confirm.1 =You are about to PERMANENTLY delete ALL lessons from course "{0}". Are you ABSOLUTELY sure that you want to do this? There will be no turning back!
+msg.delete.all.lesson.confirm.2 =ALL lessons will be deleted, including active ones with learners in them. NO lessons will be left in the course. Are you sure you want to continue?
+msg.delete.all.lesson.error =Error while deleting course lessons lessons
+label.delete.all.lesson.count  =Number of remaining / total lessons:
+label.delete.all.lesson.progress  =Deleting...
+sysadmin.lesson.delete.title =Delete all lessons from course
 #======= End labels: Exported 511 labels for en AU =====
