--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -422,5 +422,5 @@ label.lesson.starts=Lesson starts {0}
 button.schedule.disable.tooltip  =Schedule lesson to be disabled at a future time
 button.disable.now  =Disable now
 button.disable.now.tooltip  =Disable the lesson immediately
-
+label.reschedule=Reschedule
 #======= End labels: Exported 401 labels for en AU =====
