LDEV-4486 Prevent user from removing course if there are lessons in it
When sysadming tries to remove a course, he gets warned about lessons
existing in the course or its subcourses. Then he is redirected to a
page where he can remove the lessons. Only if the course and its
subcourses are empty, the course can get removed.

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -524,4 +524,6 @@ msg.delete.all.lesson.error =Error while deleting course lessons lessons
 label.delete.all.lesson.count  =Number of remaining / total lessons:
 label.delete.all.lesson.progress  =Deleting...
 sysadmin.lesson.delete.title =Delete all lessons from course
+msg.delete.organisation.confirm =You are about to permanently remove a course. Are you sure want to do this?
+msg.delete.organisation.delete.lessons.confirm =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
 #======= End labels: Exported 511 labels for en AU =====
