LDEV-4488 Replace "description" column with "create date" in org list

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -114,6 +114,7 @@ admin.organisation.code  =Code
 admin.organisation.description  =Description
 admin.organisation.locale  =Locale
 admin.organisation.status  =Status
+admin.organisation.create.date =Create date
 admin.can.add.user  =Course Administrators can add new users
 admin.can.browse.user  =Course Administrators can browse all users in the system
 admin.can.change.status  =Course Administrators can change status of course
