LDEV-4487 Toggle display activity scores option in monitor

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -423,4 +423,10 @@ button.schedule.disable.tooltip  =Schedule lesson to be disabled at a future tim
 button.disable.now  =Disable now
 button.disable.now.tooltip  =Disable the lesson immediately
 label.reschedule=Reschedule
+label.display.activity.scores=Display activity scores on completion
+lesson.display.activity.scores.alert  =Now learners can see their activity scores on lesson completion.
+lesson.hide.activity.scores.alert  =Now learners can not see their activity scores on lesson completion.
+tour.display.activity.scores.content  =Click on <b>Display activity scores on completion</b> to allow learners to see their activity scores when they finish a lesson. Click again to disable.
+tour.lesson.description=Lesson description shown to the learner when the lesson is launched. It may be changed with the Lesson Introduction button below.
+tour.edit.lesson.introduction=Change the lesson description (shown above). This description is shown to the learner when the lesson is launched.
 #======= End labels: Exported 401 labels for en AU =====
