LDEV-4421 Comments allowed for authored items in Share Resources

--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources.properties
@@ -180,5 +180,7 @@ label.error  =Error
 error.loaderror  =There was an error loading the grid. If this problem persists, please contact your system administrator.
 label.ok  =OK
 
-
+label.comments=Comments
+label.enable.comments=Enable Comments
+label.view.comments=View Comments
 #======= End labels: Exported 170 labels for en AU =====
