LDEV-4500 Check if all activities in TBL sequence are grouped

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -493,6 +493,7 @@ authoring.fla.sequence  =sequence
 authoring.fla.sequence.not.valid  =The sequence is not valid.<br />It needs to be corrected before it can be used in lessons.
 authoring.fla.sequence.validation.issues  =While saving the sequence there were following validation issues:
 authoring.fla.save.successful  =Congratulations! Your design is valid and has been saved.
+authoring.fla.save.successful.check.grouping  =Your design is valid and has been saved.\\nYou may want to make all activities grouped, please verify.
 authoring.fla.liveedit.save.successful  =Changes were successfully applied.
 authoring.fla.navigate.away.confirm  =Your design is not saved.\\nAny changes you made since you last saved will be lost.
 authoring.fla.delete.node.confirm  =Are you sure you want to delete this
