--- a/lams_tool_survey/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources.properties
@@ -184,6 +184,6 @@ label.survey.options  =Options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.summary.downloaded=  =Report Downloaded
-
+label.timestamp=Timestamp
 
 #======= End labels: Exported 178 labels for en AU =====
