--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -527,4 +527,11 @@ label.delete.all.lesson.progress  =Deleting...
 sysadmin.lesson.delete.title =Delete all lessons from course
 msg.delete.organisation.confirm =You are about to permanently remove a course. Are you sure want to do this?
 msg.delete.organisation.delete.lessons.confirm =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
+label.event.log=Event (Audit) Log
+label.event.topic=Topic
+label.event.type=Type of Event
+label.select.topic=Select topic...
+label.select.type=Select type...
+label.date=Date
+label.between.dates=Between dates
 #======= End labels: Exported 511 labels for en AU =====
