--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -534,4 +534,34 @@ label.select.topic=Select topic...
 label.select.type=Select type...
 label.date=Date
 label.between.dates=Between dates
+label.lesson.with.name=Lesson: {0}
+
+label.type.teacher.learning.design.create=Learning Design Created
+label.type.teacher.lesson.create=Lesson Created
+label.type.teacher.lesson.start=Lesson Started
+label.type.teacher.lesson.change.state=Lesson State Changed
+label.type.learner.activity.start=Activity Started
+label.type.learner.activity.finish=Activity Finished
+label.type.learner.lesson.complete=Lesson Complete
+label.type.learner.lesson.mark.submit=Mark Submitted
+label.type.activity.edit=Activity Edited
+label.type.force.complete=Learner Force Completed
+label.type.user.org.admin=Organisation or User Changed
+label.type.login.as=Sysadmin Logged In As
+label.type.password.change=Password Change
+label.type.role.failure=Action Attempted With Wrong Roles
+label.type.account.locked=Account Locked
+label.type.notification=Notification
+label.type.mark.updated=Mark Updated
+label.type.mark.released=Mark Released
+label.type.learner.content.updated=Learner's Entry Modified
+label.type.learner.content.show.hide=Learner's Entry Shown/Hidden
+label.type.unknown=Unknown
+label.area.lesson=Lesson
+label.area.security=Security
+label.area.notification=Notification
+label.area.marks=Marks
+label.area.learner.content=Learner Entry
+label.area.unknown=Unknown
+
 #======= End labels: Exported 511 labels for en AU =====
