LDEV-4510 Team based learning template added to authoring
Look and feel done, validation working.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -759,4 +759,53 @@ error.branching.upload.must.use.existing.groups=Cannot update branching. Must us
 
 label.print=Print
 
+
+#====== Templates
+authoring.msg.close.cancel.save=Do you want to close this window without saving?
+authoring.msg.list.cancel.save=Do you want to return to the template list without saving?
+authoring.fla.page.menu.new.template=Use Template
+authoring.template.list.introduction=Select a template from the list to see more details about the design that will be created. You can the proceed to create the design or return back to this list.
+authoring.learning.design.templates=Learning Design Templates
+authoring.template.successful=Your design has been saved as {0}.
+
+authoring.label.sequence.title=Title of Sequence
+authoring.error.sequence.title=Title of Sequence may not be blank
+authoring.error.question.num=Question {0} may not be blank
+authoring.error.question.correct.num=One of the answers for Question {0} needs to be correct.
+authoring.description.application.exercise=Application Exercise (These question(s) will be shown during the analysis phase in the sequence.)
+authoring.label.grouping=Grouping
+authoring.label.grouping.learners.choice=Learner's Choice
+authoring.label.grouping.teachers.choice=Teacher's Choice
+authoring.label.grouping.random.allocation=Random Allocation
+authoring.label.numgroups=Number of groups:
+authoring.error.numgroups=Number of groups must be 1 to 99.
+authoring.label.numlearners=Number of learners:
+authoring.error.numlearners=Number of learners must be 1 to 99.
+authoring.error.group.data=Group settings are not correct.
+authoring.section.lessondetails=Lesson Details
+authoring.section.questionsanalysis=Questions & Analysis
+authoring.section.applicationexercise=Application Exercise
+authoring.section.introduction=Introduction
+authoring.create.question=Create Question
+authoring.label.application.exercise.num=Application Exercise {0}
+authoring.error.application.exercise.num=Application Exercise {0} may not be blank.
+authoring.label.question.num=Question {0}
+authoring.label.option.num=Option {0}
+authoring.error.option=Option may not be blank
+authoring.label.correct.question=Correct?
+authoring.create.option=Create Option
+button.next=Next
+button.previous=Previous
+button.return.to.template.list=Go back to Template list
+authoring.error.content.id=Content ID is missing
+authoring.error.question.correct.num=One of the answers for Question {0} needs to be correct.
+authoring.error.question.must.have.answer.num=Question {0} must have at least one answer.
+
+#=================== Specific to Team Based Learning (TBL) =========================#
+authoring.tbl.template.title=Team Based Learning
+authoring.tbl.template.description=Individual and Team Readiness Assessments followed by Application Exercises.
+authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.
+authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
+
+
 #======= End labels: Exported 732 labels for en AU =====
