LDEV-4519 Basic form for org password change

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -529,4 +529,9 @@ msg.delete.organisation.confirm =You are about to permanently remove a course. A
 msg.delete.organisation.delete.lessons.confirm =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
 admin.org.password.change.title =Reset password for course members
 admin.org.password.change.button =Password reset
+admin.org.password.change.is.staff =Authors/monitors
+admin.org.password.change.is.learners =Students
+admin.org.password.change.generate =Generate new password
+admin.org.password.change.email =Email new password
+admin.org.password.change.force =Force change password after login
 #======= End labels: Exported 511 labels for en AU =====
