LDEV-4519 Prompt user to enter own password or generate one

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -534,4 +534,5 @@ admin.org.password.change.is.learners =Students
 admin.org.password.change.generate =Generate new password
 admin.org.password.change.email =Email new password
 admin.org.password.change.force =Force change password after login
+admin.org.password.change.custom =Enter own password or generate one
 #======= End labels: Exported 511 labels for en AU =====
