LDEV-4519 Add paged, sortable user grids

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -535,4 +535,8 @@ admin.org.password.change.generate =Generate new password
 admin.org.password.change.email =Email new password
 admin.org.password.change.force =Force change password after login
 admin.org.password.change.custom =Enter own password or generate one
+admin.org.password.change.grid.login =Login
+admin.org.password.change.grid.name =Name
+admin.org.password.change.grid.email =Email
+admin.org.password.change.grid.error.load =Error while loading users into grid
 #======= End labels: Exported 511 labels for en AU =====
