LDEV-4501 All Audit Log entries are now Log Event entries

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -534,7 +534,8 @@ label.select.topic=Select topic...
 label.select.type=Select type...
 label.date=Date
 label.between.dates=Between dates
-label.lesson.with.name=Lesson: {0}
+label.lesson.with.name=Lesson: {0} ({1})
+label.activity.with.name=Activity: {0} ({1})
 
 label.type.teacher.learning.design.create=Learning Design Created
 label.type.teacher.lesson.create=Lesson Created
@@ -563,5 +564,7 @@ label.area.notification=Notification
 label.area.marks=Marks
 label.area.learner.content=Learner Entry
 label.area.unknown=Unknown
+audit.change.made.by=Changes Made By
+audit.change.made.to=Changes Made To
 
 #======= End labels: Exported 511 labels for en AU =====
