--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -807,5 +807,6 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
+audit.design.created=Learning design "{0}" ({1}) created by {2} ({3})
 
 #======= End labels: Exported 732 labels for en AU =====
