--- a/lams_common/conf/language/lams/ApplicationResources.properties
+++ b/lams_common/conf/language/lams/ApplicationResources.properties
@@ -25,9 +25,9 @@ theme.service.setTheme.saved  =User theme saved.
 theme.service.setTheme.type.invalid  =Invalid theme type.
 theme.service.setTheme.noSuchTheme  =No such theme exists.
 theme.service.setTheme.noSuchUser  =No such User exists.
-audit.change.entry  =Tool {3} Changed text for user {0}. Old text: {1} New Text: {2}.
-audit.hide.entry  =Tool {2} Hide entry for user {0}. Entry was {1}
-audit.show.entry  =Tool {2} Show entry for user {0}. Entry was {1}
+audit.change.entry  =User {3} ({4}) Changed text for user {0}. Old text: {1} New Text: {2}.
+audit.hide.entry  =User {2} ({3}) Hide entry for user {0}. Entry was {1}
+audit.show.entry  =User {2} ({3}) Show entry for user {0}. Entry was {1}
 group.name.prefix  =Group
 imported.permission.gate.title  =Permission gate
 imported.synchronise.gate.title  =Synchronise gate
@@ -66,10 +66,11 @@ email.notifications.tool  =tool
 email.notifications.activity  =activity
 error.requires.existing.grouping  =Activity {0} requires existing grouping but no group for user {1} exists yet.
 validation.error.GroupingNotUsed  =Grouping is not used in any of activities
-audit.change.mark  =Tool {3} Changed mark for user {0}. Old mark: {1}, new mark: {2}
+audit.change.mark  =User {3} ({4})  Changed mark for user {0}. Old mark: {1}, new mark: {2}
 audit.started.editing.activity  =Teacher {0} has started editing activity {1} in monitor
 audit.finished.editing.activity  =Teacher {0} has finished editing activity {1} in monitor
 audit.cancelled.editing.activity  =Teacher {0} has cancelled editing activity {1} in monitor
-
+audit.tool.prefix=Tool {0}:
+audit.change.initiated.by=Change Initiated By
 
 #======= End labels: Exported 64 labels for en AU =====
