--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -183,4 +183,8 @@ label.kumalive.poll.missing.voters =Not voted
 label.kumalive.poll.results =Results
 label.kumalive.poll.votes.total =Total votes
 button.kumalive.poll.chart.switch =Switch chart
+audit.activity.started=Learner {0} ({1}) started activity {2} ({3})
+audit.activity.stopped=Learner {0} ({1}) stopped activity {2} ({3})
+audit.learner.lesson.complete=Learner {0} ({1}) completed lesson {2} ({3})
+
 #======= End labels: Exported 151 labels for en AU =====
