--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -51,7 +51,7 @@ force.complete.stop.message.gate  =Move to activity stopped at a gate "{0}" that
 force.complete.stop.message.completed.to.activity  =Move to activity successful.
 force.complete.stop.message.completed.to.end  =Move to activity successful to end of the lesson.
 force.complete.stop.message.stopped.unexpectedly  =Move to activity has finished processing. Please check the learner's progress bar for their current activity.
-audit.lesson.created  =Lesson "{0}" created with learning design "{1}".
+audit.lesson.created  =Lesson "{0}" created with learning design "{1}" ({2})
 label.branching.general.instructions  =Place the lesson participants in their branches. Initially you can add and remove learners, but once a participant starts one of the branches then you will not be able to remove learners from any branches. If you try to remove someone from a branch and they will not remove then check their progress - if they start using the branch while you are on this screen you will not get any errors but you will not be able to remove them from the branch. You will still be able to add learners to branches.
 label.branching.branch.heading  =Branch
 label.branching.non.allocated.users.heading  =Learners without a branch
