LDEV-4519 Layout adjustments

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -539,4 +539,6 @@ admin.org.password.change.grid.login =Login
 admin.org.password.change.grid.name =Name
 admin.org.password.change.grid.email =Email
 admin.org.password.change.grid.error.load =Error while loading users into grid
+admin.org.password.change.choose =Change password for
+
 #======= End labels: Exported 511 labels for en AU =====
