LDEV-4519 Add form validation and success message

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -530,7 +530,7 @@ msg.delete.organisation.delete.lessons.confirm =The course or one of its subcour
 admin.org.password.change.title =Reset password for course members
 admin.org.password.change.button =Password reset
 admin.org.password.change.is.staff =Authors/monitors
-admin.org.password.change.is.learners =Students
+admin.org.password.change.is.learner =Students
 admin.org.password.change.generate =Generate new password
 admin.org.password.change.email =Email new password
 admin.org.password.change.force =Force change password after login
@@ -540,5 +540,8 @@ admin.org.password.change.grid.name =Name
 admin.org.password.change.grid.email =Email
 admin.org.password.change.grid.error.load =Error while loading users into grid
 admin.org.password.change.choose =Change password for
-
+admin.org.password.change.submit =Change password
+admin.org.password.change.error.prefix.staff =Authors/monitors password 
+admin.org.password.change.error.prefix.learners =Authors/monitors password 
+admin.org.password.change.success =Passwords successfully changed 
 #======= End labels: Exported 511 labels for en AU =====
