LDEV-4519 Email changed password to users

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -544,4 +544,6 @@ admin.org.password.change.submit =Change password
 admin.org.password.change.error.prefix.staff =Authors/monitors password 
 admin.org.password.change.error.prefix.learners =Authors/monitors password 
 admin.org.password.change.success =Passwords successfully changed 
+admin.org.password.change.email.subject =LAMS password change
+admin.org.password.change.email.body  =Your password has been changed to: {0}\n\n-- email sent automatically by LAMS
 #======= End labels: Exported 511 labels for en AU =====
