LKC-89 add labels
To be able to use them even before they will be added to i18n server

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -412,5 +412,31 @@ audit.lesson.status.changed  =Lesson "{0}" ({1}) status changed from "{2}" to "{
 tour.gradebook.show.weight  =Show Weights
 tour.gradebook.show.weight.content  =Show/hide the activity weights used for marking this lesson.
 
+label.tbl.monitor  =TBL Monitor
+label.teams  =Teams
+label.students.teams  =Students & Teams
+label.student  =Student
+label.gates  =Gates
+label.ira  =iRA
+label.tra  =tRA
+label.burning.questions  =Burning Qs
+label.forum  =Forum
+label.aes  =AEs
+label.sequence  =Sequence
+label.sequence.diagram  =Sequence diagram
+label.refresh  =Refresh
+label.attendance  =Attendance
+label.users.knocking.on.gate  ={0} users knocking on the gate...
+label.comparison  =Comparison
+label.change.leader  =Change leader
+label.bar.chart  =Bar chart
+label.score  =Score
+label.ira.responses.for  =iRA responses for
+label.tra.responses.for  =tRA responses for
+label.note.leader.change  =Note that the leader change only will take place for the activities in which the existing leader has not been set or commenced.
+label.current.leader  =Current leader: 
+label.leader.successfully.changed  =Leader has been successfully changed
+label.view.forum  =View forum
+label.switch.to.regular.monitor  =Switch to regular monitor
 
 #======= End labels: Exported 401 labels for en AU =====
