--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_en_AU.properties
@@ -219,4 +219,11 @@ label.enable.confidence.levels  =Enable confidence levels
 label.what.is.your.confidence.level  =How confident you are answering this question?
 label.confidence  =Confidence
 
+label.ira.questions.marks  =iRA Questions & Marks
+label.attendance  =Attendance
+label.show.students.choices  =Show students' choices
+label.hide.students.choices  =Hide students' choices
+label.print  =Print
+label.excel.export  =Excel export
+
 #======= End labels: Exported 208 labels for en AU =====
