--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -322,5 +322,14 @@ label.what.is.your.confidence.level  =How confident are you of your answer?
 label.confidence  =Confidence
 label.no.questions.in.question.bank  =No questions have been added to the question list. Do you still want to proceed with no questions?
 
+label.ae.questions.marks  =AE Questions & Marks
+label.ira.questions.marks  =iRA Questions & Marks
+label.attendance  =Attendance
+label.show.students.choices  =Show students' choices
+label.hide.students.choices  =Hide students' choices
+label.print  =Print
+label.excel.export  =Excel export
+label.teams  =Teams
+
 
 #======= End labels: Exported 310 labels for en AU =====
