--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -217,6 +217,12 @@ label.change.marking.allocation  =Change marking allocation
 label.change.marking.allocation.warning  =Attention: changing marking allocation will affect the way marks get calculated.
 label.modify.default.marking  =Modify default marking
 
-
-
+label.tra.questions.marks  =tRA Questions & Marks
+label.attendance  =Attendance
+label.show.students.choices  =Show students' choices
+label.hide.students.choices  =Hide students' choices
+label.tra.results.by.team  =tRA results by team
+label.average  =average
+label.print  =Print
+label.teams.notuppercase  =Teams
 #======= End labels: Exported 203 labels for en AU =====
