LDEV-4524 Monitoring Task Item List loads correctly
This screen also missed being bootstrapped so the layout is 
updated. Also fixed a bug that stopped the Task Item list loading
for a learner entered task if the Monitor had gone into Edit 
Activity and saved the activity.

--- a/lams_tool_task/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources.properties
@@ -110,7 +110,7 @@ label.monitoring.summary.confirm.completion  =Confirm completion
 label.monitoring.summary.title.reflection  =Notebook entry
 label.monitoring.summary.reflection  =Notebook entry
 label.monitoring.tasksummary.task.summary  =Task summary
-label.monitoring.tasksummary.task.required.to.finish  =this task is required to finish this activity
+label.monitoring.tasksummary.task.required.to.finish  =(This task is required to finish this activity.)
 label.monitoring.tasksummary.parent.activity  =Parent task
 label.monitoring.tasksummary.comments.files.enabled  =Comments/files enabled
 label.monitoring.tasksummary.user  =Learner
