--- a/lams_tool_task/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_en_AU.properties
@@ -110,7 +110,7 @@ label.monitoring.summary.confirm.completion  =Confirm completion
 label.monitoring.summary.title.reflection  =Notebook entry
 label.monitoring.summary.reflection  =Notebook entry
 label.monitoring.tasksummary.task.summary  =Task summary
-label.monitoring.tasksummary.task.required.to.finish  =this task is required to finish this activity
+label.monitoring.tasksummary.task.required.to.finish  =(This task is required to finish this activity.)
 label.monitoring.tasksummary.parent.activity  =Parent task
 label.monitoring.tasksummary.comments.files.enabled  =Comments/files enabled
 label.monitoring.tasksummary.user  =Learner
