LDEV-4530 Control in authoring whether scratchies are shown in results

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources.properties
@@ -209,6 +209,6 @@ label.marks  =Marks
 label.number.groups.in.mark.range  =Number of groups in mark range
 label.average.mark  =Average mark
 message.monitoring.edit.activity.warning  =Warning: if you edit and modify a question or change an answer that a leader has already answered, then the mark for the whole group for the modified question will be deleted permanently as it is assumed that the question has changed.
-
+label.authoring.advanced.show.scratchies.in.results  =Show scratchies to students on results page
 
 #======= End labels: Exported 203 labels for en AU =====
