LDEV-4535 Changes to TBL Template
Added support for a Peer Review activity, Monitor selected group 
count saved properly the application exercises are grouped.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -809,4 +809,12 @@ authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add
 
 audit.design.created=Learning design "{0}" ({1}) created by {2} ({3})
 
+authoring.tbl.desc.peer.review=These are the criteria for which the learners will rate each other using a 5 star rating. These fields are optional and no Peer Review will be created if they are left blank.
+authoring.section.peerreview=Peer Review
+authoring.label.peerrevice.criteria.num=Rating Criteria {0}
+authoring.label.peerrevice.allow.comments=Allow learners to comment on other learners
+authoring.label.peerrevice.min.words.in.comments=Minimum number of words in a comment
+authoring.create.criteria=Create Criteria
+
+
 #======= End labels: Exported 732 labels for en AU =====
