--- a/lams_central/conf/language/lams/TBLResources.properties
+++ b/lams_central/conf/language/lams/TBLResources.properties
@@ -13,3 +13,5 @@ boilerplate.ae.instructions=Instructions to students
 boilerplate.ae.application.exercise.num=Application Exercise {0}
 boilerplate.individual.reflection.title=Notebook
 boilerplate.individual.reflection.instructions=What are your key learning points?
+boilerplate.peerreview=Peer Review
+boilerplate.peerreview.instructions=Please rate your peers' interaction with the group.
