LDEV-4537 Add Peer Review tab to TBL monitoring

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -421,6 +421,7 @@ label.ira  =iRA
 label.tra  =tRA
 label.burning.questions  =Burning Qs
 label.forum  =Forum
+label.peer.review  =Peer Review
 label.aes  =AEs
 label.sequence  =Sequence
 label.sequence.diagram  =Sequence diagram
