--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -193,4 +193,9 @@ email.send.automatically=This message was sent automatically, please do not repl
 email.label.feedback=Feedback from group members for {0}:
 email.label.self.rating=Self rating
 email.label.peers.ratng=Peers
+
+label.email.preview=Email Preview
+button.preview.results  =View / Email Results
+label.hide  =Hide
+label.email.send.failed.preview.wrong=Sending failed - preview cannot be sent. Please create a new preview.
 #======= End labels: Exported 166 labels for en AU =====
