LDEV-4538 Display gate open user and time in monitoring

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -14,7 +14,8 @@ label.schedule.gate.title  =Schedule gate
 label.schedule.gate.open.message  =Schedule gate will be opened at:
 label.schedule.gate.close.message  =Schedule gate will be closed at:
 label.gate.you.open.message  =You may open the gate for the whole class
-label.gate.gate.open  =Gate has been opened
+label.gate.gate.open  =Gate was opened
+label.gate.gate.open.user  =by {0}
 label.gate.open  =Open
 label.gate.closed  =Closed
 label.gate.waiting.learners  ={0} out of {1} are waiting in front of the gate.
